<resources>
    <string name="app_name">Synthronize</string>
    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- SignUp Activity -->
    <string name="signup">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account? Log In here</string>

    <!-- Main Activity -->
    <string name="communities">Communities</string>
    <string name="Chats">Chats</string>
    <string name="Profile">Profile</string>
    <string name="Explore">Explore</string>
    <string name="Notifications">Notifications</string>

    <!-- Search Activity -->
    <string name="Search">Search</string>
    <string name="SEARCH">SEARCH</string>

    <!-- Chatroom Activity -->
    <string name="User">User</string>
    <string name="Write_Message_Here">Write a message here..</string>


    <string name="COMMUNITIES">COMMUNITIES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="user_description">user description</string>
    <string name="add_friend">Add Friend</string>
    <string name="message_user">Message User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Username">Username</string>
    <string name="description">Description</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="feeds">Feeds</string>
    <string name="events">Events</string>
    <string name="forums">Forums</string>
    <string name="market">Market</string>
    <string name="files">Files</string>
    <string name="Groups">Groups</string>
    <string name="tap_here_to_set_birthday">Tap here to set birthday</string>
    <string name="save_user_details">Save User Details</string>
    <string name="posts">Posts</string>
    <string name="friends">Friends</string>
    <string name="achievements">Achievements</string>
    <string name="join_community">Join Community</string>
    <string name="request_to_join">Request To Join</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="enter">Enter</string>
    <string name="create_community">CREATE COMMUNITY</string>
    <string name="next">Next</string>
    <string name="community_name">Community Name</string>
    <string name="community_description">Community Description</string>
    <string name="community_type">Community Type</string>
    <string name="join_community_via_code">Join Community Via Code</string>
    <string name="search_community">Search Community</string>
    <string name="create_new_community">Create New Community</string>
    <string name="cancel">Cancel</string>
    <string name="previous">Previous</string>
    <string name="invite_users">Invite Users</string>
    <string name="set_community_profile_and_cover_photo">Set Community Profile and Cover Photo</string>
    <string name="toolbar_title">toolbar title</string>
    <string name="general">General</string>
    <string name="admin">Admin</string>
    <string name="community_code">Community Code</string>
    <string name="friend_button">friend button</string>
    <string name="view_community_rules">View Community Rules</string>
    <string name="view_all_members">View All Members</string>
    <string name="leave_community">Leave Community</string>
    <string name="share_community_with_community_code">Share Community with Community Code</string>
    <string name="members">Members</string>
    <string name="kick_user">Kick User</string>
    <string name="enter_community_code">Enter Community Code</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="feed_description">Feed Description</string>
    <string name="reposted">Reposted</string>
    <string name="lovescount">lovesCount</string>
    <string name="comment_count">comment count</string>
    <string name="repost_count">repost count</string>
    <string name="write_what_s_on_your_mind">Write what\'s on your mind</string>
    <string name="comments">Comments</string>
    <string name="view_join_requests">View Join Requests</string>
    <string name="menuoption">menuOption</string>
    <string name="inbox">Inbox</string>
    <string name="community_chats">Community Chats</string>
    <string name="edit_community_details">Edit Community Details</string>
    <string name="edit_community_rules">Edit Community Rules</string>
    <string name="delete_community">Delete Community</string>
    <string name="edit_community">Edit Community</string>
    <string name="users">Users</string>
    <string name="timestamp">timestamp</string>
    <string name="name">Name</string>
    <string name="group_name">Group Name</string>
    <string name="community_reports">Community Reports</string>
    <string name="default_web_client_id">360481503787-kbbn4veu4fg1429dltli6b3bd205sm9o.apps.googleusercontent.com</string>


</resources>