<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple_2"
    tools:context=".CommunityFragment">



        <RelativeLayout
            android:id="@+id/communityNavigation"
            android:background="@color/dark_purple_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

                <!-- Navigation -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="13dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/feedsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/feeds"
                        android:textColor="@color/light_purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/eventsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/events"
                        android:textColor="@color/light_purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/forumsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/forums"
                        android:textColor="@color/light_purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/marketTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/market"
                        android:textColor="@color/light_purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/filesTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/files"
                        android:textColor="@color/light_purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </HorizontalScrollView>

        </RelativeLayout>

    <!-- RecyclerView for Posts -->
    <FrameLayout
        android:id="@+id/communityFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/communityNavigation"/>


</RelativeLayout>
