<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chatroomLayout"
    android:layout_width="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_height="70dp"
    android:layout_marginTop="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userCircleImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/community_default_profile"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@id/userCircleImageView">

        <TextView
            android:id="@+id/chatroomNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/full_name"
            android:textColor="@color/light_teal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lastUserMessageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textStyle="bold"
                android:contentDescription="@string/Chats"
                android:textColor="@color/light_teal"/>
            <TextView
                android:id="@+id/lastTimestampTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:contentDescription="@string/timestamp"
                android:textColor="@color/light_teal"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>