<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_teal"
    tools:context=".EditProfile">


    <RelativeLayout
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/darker_teal"
        android:padding="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerVertical="true">
            <ImageButton
                android:id="@+id/backBtn"
                android:layout_marginStart="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/back_icon"
                app:tint="@color/light_teal" />
            <TextView
                android:id="@+id/toolbarTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="25dp"
                android:textColor="@color/light_teal"
                android:text="@string/edit_profile"/>
        </LinearLayout>

    </RelativeLayout>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/mainToolbar"
        app:dividerColor="@color/light_teal" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/divider"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_below="@id/divider"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/userCoverIV"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:src="@color/black"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userProfileCIV"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_centerInParent="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/user_default_profile"/>


                </RelativeLayout>
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/light_teal"
                android:textSize="14sp"
                android:text="@string/full_name"/>
            <EditText
                android:id="@+id/fullNameEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_teal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/light_teal"
                android:contentDescription="@string/full_name"
                android:textSize="16sp"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/light_teal"
                android:textSize="14sp"
                android:text="@string/Username"/>
            <EditText
                android:id="@+id/usernameEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_teal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/username"
                android:paddingStart="10dp"
                android:textColor="@color/light_teal"
                android:textSize="16sp"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/light_teal"
                android:textSize="14sp"
                android:text="@string/description"/>
            <EditText
                android:id="@+id/descriptionEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_teal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/description"
                android:paddingStart="10dp"
                android:textColor="@color/light_teal"
                android:textSize="16sp"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/light_teal"
                android:textSize="14sp"
                android:text="@string/birthday"/>
            <EditText
                android:id="@+id/birthdayEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_teal"
                android:focusable="false"
                android:editable="false"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:hint="@string/tap_here_to_set_birthday"
                android:textColorHint="@color/light_teal"
                android:contentDescription="@string/birthday"
                android:paddingStart="10dp"
                android:textColor="@color/light_teal"
                android:textSize="16sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/teal"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassEdtTxt" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>