<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_gray_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="200dp"
                android:layout_marginTop="96dp"
                android:src="@drawable/synthronize_logo" />

            <EditText
                android:id="@+id/emailEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/input_rounded_corners"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"   />


            <androidx.cardview.widget.CardView
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                app:cardCornerRadius="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/passwordEdtTxt"
                        android:layout_width="270dp"
                        android:layout_height="48dp"
                        android:background="@drawable/input_rounded_corners"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/pwVisibilityBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="button"
                        android:src="@drawable/baseline_visibility_off_24"
                        app:tint="#575656" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:hapticFeedbackEnabled="true"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/teal"
                app:cornerRadius="15dp"  />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInWithGoogleBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="24dp"
                android:hapticFeedbackEnabled="true"
                android:text="Sign in with Google"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:drawableLeft="@drawable/google_icon"
                app:backgroundTint="@color/light_blue"
                app:cornerRadius="15dp"  />


            <TextView
                android:id="@+id/resetPassTV"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/forgot_password"
                android:textColor="@color/light_teal"  />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/light_teal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPassTV" />

        <TextView
            android:id="@+id/signUpTV"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/don_t_have_an_account_sign_up_now"
            android:textColor="@color/light_teal"
            android:textSize="14sp"  />
    </LinearLayout>

</ScrollView>